feat: Add OCR service for invoice processing with positional data extraction
- Add Docker-based OCR service using Tesseract 4.1.1 with Dutch/English support
- Implement hybrid Flask API for PDF text + OCR validation
- Add N8N integration scripts for enhanced invoice parsing
- Include Docker Compose override for OCR service deployment
- Add comprehensive documentation for setup and integration
- Update .gitignore to exclude data directories and secrets

Services deployed:
- OCR API at https://ocr.fivi.eu with health checks
- Internal access for N8N at http://ocr-service:8080
- Ready for production invoice automation workflows

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@
 # mounted volume
 sites
 
+# Database and persistent data
+mariadb-data/
+redis-queue-data/
+traefik/
+
+# Secrets
+secrets/
+
 development/*
 !development/README.md
 !development/installer.py
