--- a/example.env
+++ b/example.env
@@ -27,7 +27,7 @@ LETSENCRYPT_EMAIL=mail@example.com
 FRAPPE_SITE_NAME_HEADER=
 
 # Default value is `8080`.
-HTTP_PUBLISH_PORT=
+HTTP_PUBLISH_PORT=8181
 
 # Default value is `127.0.0.1`. Set IP address as our trusted upstream address.
 UPSTREAM_REAL_IP_ADDRESS=
@@ -53,3 +53,16 @@ CLIENT_MAX_BODY_SIZE=
 # More https://doc.traefik.io/traefik/routing/routers/#rule
 # About acme https://doc.traefik.io/traefik/https/acme/#domain-definition
 SITES=`erp.example.com`
+
+# Core Frappe setup
+FRAPPE_VERSION=v15
+ERPNEXT_VERSION=v15
+COMPOSE_PROFILES=backend,frontend,scheduler,queue-short,queue-long
+
+# Default site settings
+SITE_NAME=frappe.fivi.eu
+INSTALL_APPS=erpnext
+
+
+# Traefik integration (future-proof placeholders)
+TRAEFIK_NETWORK=traefik-public
