--- a/overrides/compose.traefik-ssl.yaml
+++ b/overrides/compose.traefik-ssl.yaml
@@ -28,7 +28,7 @@ services:
       # Create an entrypoint https listening on port 443
       - --entrypoints.https.address=:443
       # Create the certificate resolver le for Let's Encrypt, uses the environment variable EMAIL
-      - --certificatesresolvers.le.acme.email=${EMAIL:?No EMAIL set}
+      - --certificatesresolvers.le.acme.email=${EMAIL:-${LETSENCRYPT_EMAIL:?No EMAIL set}}
       # Store the Let's Encrypt certificates in the mounted volume
       - --certificatesresolvers.le.acme.storage=/certificates/acme.json
       # Use the TLS Challenge for Let's Encrypt
